<resources>
    <string name="app_name">Happy Places App</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="btn_save_text">Save</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="note_text_no_happy_places">No happy places yet, please add one.</string>
    <string name="image_content_description">A happy place photo you took </string>
</resources>